tests/should_not_compile/not_in_inclusive_range.stderr
error: discriminant does not match any pattern
 --> tests/should_not_compile/not_in_inclusive_range.rs:6:12
  |
6 |     Zero = 0,
  |            ^

error: discriminant does not match any pattern
  --> tests/should_not_compile/not_in_inclusive_range.rs:10:12
   |
10 |     Four = 4,
   |            ^
